[gd_scene load_steps=2 format=3 uid="uid://c8ko6p45x2opv"]

[ext_resource type="Script" uid="uid://ucmytmrhsmkq" path="res://pause_menu.gd" id="1_3okcx"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_3okcx")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_right = 0.763
anchor_bottom = 0.753
offset_right = 498.024
offset_bottom = 325.056

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 70.0
offset_top = 41.0
offset_right = 284.0
offset_bottom = 124.0
text = "RESUME"

[node name="MainMenuButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 73.0
offset_top = 156.0
offset_right = 285.0
offset_bottom = 236.0
text = "BACK TO MAIN MENU"

[connection signal="pressed" from="Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
